--- a/css/style.css
+++ b/css/style.css
@@ -155,3 +155,298 @@ h2 {
 	padding: 15px;
 	color: #fff;
 }
+
+/* ============= EVENTS. addEventListener delegation. Keyboard mouse events loading the site. ================= */
+
+.wrapper1 {
+	padding: 30px;
+}
+
+li {
+	list-style: none;
+}
+
+h1 {
+	margin: 0px 0px 20px 0px;
+	line-height: 150%;
+}
+h2 {
+	margin: 0px 0px 15px 0px;
+}
+
+a:hover {
+	text-decoration: none;
+}
+
+.button {
+	padding: 15px;
+	font-size: 16px;
+	font-weight: 700;
+	margin: 0px 0px 20px 0px;
+	cursor: pointer;
+	background-color: rgb(231, 231, 0);
+}
+
+.yellow {
+	color: rgb(231, 231, 0);
+}
+
+.lesson {
+	padding: 20px 0px 0px 0px;
+}
+
+button {
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: all 0.3s ease 0s;
+	padding: 0px 16px;
+	background-color: rgb(231, 231, 0);
+	font-weight: 700;
+	font-size: 16px;
+	cursor: pointer;
+}
+
+button:hover {
+	background-color: rgb(248, 248, 89);
+}
+
+button._active {
+	background-color: #7a956b;
+}
+
+.link {
+	font-size: 20px;
+	color: rgb(231, 231, 0);
+}
+
+.block {
+	padding: 15px;
+	width: 350px;
+	background-color: #794f45;
+}
+.block__inner {
+	padding: 15px;
+	margin: 15px;
+	background-color: #77608d;
+}
+.block__inner-inner {
+	margin: 15px;
+	background-color: #7a956b;
+	padding: 15px;
+}
+
+.menu {
+	display: inline-block;
+}
+
+.menu._active .menu__list {
+	display: block;
+}
+
+.menu._active .menu__button span:first-child {
+	display: none;
+}
+.menu._active .menu__button span:last-child {
+	display: block;
+}
+
+.menu__button span:first-child {
+	display: block;
+}
+.menu__button span:last-child {
+	display: none;
+}
+
+.menu__list {
+	background-color: #77608d;
+	padding: 15px;
+}
+.menu__list li:not(:last-child) {
+	margin: 0px 0px 15px 0px;
+}
+.menu__link {
+	color: #fff;
+	font-size: 16px;
+}
+.menu__link:hover {
+	text-decoration: none;
+}
+
+.block-for-mouse {
+	padding: 15px;
+	font-size: 14px;
+	width: 200px;
+	height: 200px;
+	background-color: #7a956b;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+	text-align: center;
+}
+
+.block-for-mouse span {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.drag-field {
+	width: 200px;
+	height: 200px;
+	background-color: #7a956b;
+	position: relative;
+}
+.drag-field__item {
+	width: 40px;
+	height: 40px;
+	cursor: grab;
+	background-color: #77608d;
+}
+.drag-field__item._active {
+}
+.drag-field__point {
+	width: 60px;
+	height: 60px;
+	position: absolute;
+	left: 50%;
+	top: 10%;
+	background-color: #45553d;
+	transition: all 0.3s ease 0s;
+}
+.drag-field__point._active {
+	box-shadow: inset 0px 0px 10px 5px #333f2d;
+}
+
+.textarea {
+}
+.textarea__item {
+	width: 300px;
+	height: 150px;
+	padding: 10px;
+	font-size: 18px;
+	color: #fff;
+	background-color: rgb(44, 43, 43);
+}
+.textarea__counter {
+}
+
+.scroll {
+	position: fixed;
+	top: 0;
+	right: 0;
+	background-color: #7a956b;
+	padding: 15px;
+	font-size: 20px;
+	color: #fff;
+}
+
+.image {
+}
+
+
+
+/* ============= EVENTS. addEventListener delegation. Keyboard mouse events loading the site. ================= */
+
+/* ==== ДЗ =========== */
+
+.wrap{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0px;
+  height: 55px;
+  background: #7c23b2;
+  line-height: 55px;
+  padding-right: 55px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  transition: all 0.5s ease;
+}
+
+.input{
+  border: 0;
+  background: transparent;
+  width: 0%;
+  outline: none;
+  font-family: sans-serif;
+  font-size: 18px;
+  color: #fff;
+  font-style: italic;
+  transition: all 0.3s ease;
+  position: relative;
+}
+
+.wrap .fa{
+  color: #fff;
+  position: absolute;
+  right: 17px;
+  top: 15px;
+  font-size: 22px;
+  cursor: pointer;
+}
+
+.wrap.active{
+  width: 250px;
+  padding-left: 25px;
+  transition: all 0.5s ease;
+}
+
+.input.active{
+  width: 98%;
+  padding-left: 5px;
+  transition: all 0.5s 0.8s ease;
+}
+
+input::placeholder {
+  color: #fff;
+}
+
+
+
+
+
+
+
+/* 
+
+* {box-sizing: border-box;}
+body{margin: 0;}
+div {padding: 30px 0}
+form {
+  position: relative;
+  width: 300px;
+  margin: 0 auto;
+}
+
+
+.d1 {background: #A3D0C3;}
+.d1 input {
+  width: 100%;
+  height: 42px;
+  padding-left: 10px;
+  border: 2px solid #7BA7AB;
+  border-radius: 5px;
+  outline: none;
+  background: #F9F0DA;
+  color: #9E9C9C;
+}
+.d1 button {
+  position: absolute; 
+  top: 0;
+  right: 0px;
+  width: 42px;
+  height: 42px;
+  border: none;
+  background: #7BA7AB;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+}
+.d1 button:before {
+  content: "\f002";
+  font-family: FontAwesome;
+  font-size: 16px;
+  color: #F9F0DA;
+} */
